--- a/src/components/header.html
+++ b/src/components/header.html
@@ -17,11 +17,11 @@
             
             <ul class="nav-links" id="navLinks">
                 <li><a href="#" data-page="home" class="nav-home">HOME</a></li>
-                <li><a href="#" data-page="sermons">SERMONS</a></li>
-                <li><a href="#" data-page="gallery">GALLERY</a></li>
-                <li><a href="#" data-page="announcements">ANNOUNCEMENTS</a></li>
-                <li><a href="#" data-page="about">ABOUT</a></li>
-                <li><a href="#" data-page="contact">CONTACT</a></li>
+                <li><a href="#" data-page="sermons" class="nav-link">SERMONS</a></li>
+                <li><a href="#" data-page="gallery" class="nav-link">GALLERY</a></li>
+                <li><a href="#" data-page="announcements" class="nav-link">ANNOUNCEMENTS</a></li>
+                <li><a href="#" data-page="about" class="nav-link">ABOUT</a></li>
+                <li><a href="#" data-page="contact" class="nav-link">CONTACT</a></li>
             </ul>
         </div>
     </nav>
